--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,7 +6,7 @@ $icon-layout: horizontal;
 .icon-animation {
     width: 300px;
     height: 225px;
-    background: url("../img/icon-se97b0b502b.png") left center;
+    background: url("../img/icon-sb085534cb0.png") left center;
     animation: play 3s steps(36) infinite;
 }
 
